# Hello-scikit-learn

./: .gitignore  README.md  build.bat  build.py  build.sh  config.py  generate_data.py  generate_data.spec  predict.py  pyproject.toml  requirements.txt  train_model.py
data/: sensitive_data.xlsx
docs/: PACKAGE_README.md
models/: sensitive_classifier_20250921_102455.pkl  sensitive_classifier_20250921_102901.pkl  sensitive_classifier_20250921_103638.pkl  sensitive_classifier_20250921_112704.pkl  sensitive_classifier_20250921_112846.pkl  sensitive_classifier_20250921_112902.pkl  sensitive_classifier_20250927_225428.pkl  sensitive_classifier_20250927_225439.pkl  sensitive_classifier_latest.pkl
specs/: generate_data.spec  predict.spec  train_model.spec
src/: generate_sensitive_data.py  predictor.py  trainer.py
src/generate_sensitive_data/: __init__.py  normal_code_generator.py  normal_text_generator.py  password_style.py  sensitive_data_generator.py
src/package/: __init__.py  builder.py  package_config.py  package_manager.py  platform_builders.py
