[project]
name = "hello-scikit-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "pyinstaller>=6.0.0",
]

[pip]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
